# pubkegaard

./: .gitignore  Cargo.toml  README.md
apps/pubkegaard/: Cargo.toml
apps/pubkegaard-desktop/: index.html  package-lock.json  package.json
apps/pubkegaard-desktop/src/: App.tsx  styles.css
apps/pubkegaard-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/pubkegaard-desktop/src-tauri/binaries/: boringtun-cli-aarch64-apple-darwin
apps/pubkegaard-desktop/src-tauri/src/: main.rs
apps/pubkegaard-relay/: Cargo.toml
apps/pubkegaard-relay/src/: main.rs
apps/pubkegaard/src/: main.rs
apps/pubkegaardd/: Cargo.toml
apps/pubkegaardd/src/: main.rs
crates/pubkegaard-auth/: Cargo.toml
crates/pubkegaard-auth/src/: lib.rs
crates/pubkegaard-discovery/: Cargo.toml
crates/pubkegaard-discovery/src/: lib.rs
crates/pubkegaard-firewall/: Cargo.toml
crates/pubkegaard-firewall/src/: lib.rs
crates/pubkegaard-keys/: Cargo.toml
crates/pubkegaard-keys/src/: lib.rs
crates/pubkegaard-platform/: Cargo.toml
crates/pubkegaard-platform/src/: lib.rs
crates/pubkegaard-policy/: Cargo.toml
crates/pubkegaard-policy/src/: lib.rs
crates/pubkegaard-types/: Cargo.toml
crates/pubkegaard-types/src/: lib.rs
crates/pubkegaard-wireguard/: Cargo.toml
crates/pubkegaard-wireguard/src/: lib.rs
docs/: macos-two-peer-dev.md
docs/spec/: pubkegaard-core.md  pubkegaard-desktop-ux.md  pubkegaard-desktop.md  pubkegaard-encoding.md  pubkegaard-exit.md  pubkegaard-platform.md  pubkegaard-pubky-interop.md  pubkegaard-relay.md  pubkegaard-release-desktop.md  pubkegaard-wireguard-linux.md  release-gates.md  source-baseline.md
releases/: Pubkegaard_0.1.0_aarch64.dmg
scripts/: build-bundled-wireguard-backend.sh  macos-two-peer-preflight.sh
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
