[workspace]
resolver = "2"
members = [
    "apps/pubkegaard",
    "apps/pubkegaard-relay",
    "apps/pubkegaardd",
    "crates/pubkegaard-discovery",
    "crates/pubkegaard-firewall",
    "crates/pubkegaard-policy",
    "crates/pubkegaard-types",
    "crates/pubkegaard-wireguard",
    "tests/integration",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/BitcoinErrorLog/Pubkegaard"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ipnet = { version = "2", features = ["serde"] }
pkarr = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
