[package]
name = "pubkegaard-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pubkegaard-types = { path = "../../crates/pubkegaard-types" }
serde.workspace = true
serde_json.workspace = true
