[package]
name = "pubkegaard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pubkegaard-discovery = { path = "../../crates/pubkegaard-discovery" }
pubkegaard-policy = { path = "../../crates/pubkegaard-policy" }
pubkegaard-types = { path = "../../crates/pubkegaard-types" }
serde_json.workspace = true
