[package]
name = "pubkegaardd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pubkegaard-firewall = { path = "../../crates/pubkegaard-firewall" }
pubkegaard-policy = { path = "../../crates/pubkegaard-policy" }
pubkegaard-platform = { path = "../../crates/pubkegaard-platform" }
pubkegaard-types = { path = "../../crates/pubkegaard-types" }
pubkegaard-wireguard = { path = "../../crates/pubkegaard-wireguard" }
serde.workspace = true
serde_json.workspace = true
