[package]
name = "pubkegaard-discovery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
pubkegaard-types = { path = "../pubkegaard-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
