[package]
name = "pubkegaard-keys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
pubkegaard-types = { path = "../pubkegaard-types" }
serde.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
