[package]
name = "pubkegaard-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
blake3.workspace = true
ipnet.workspace = true
pkarr.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
