[package]
name = "pubkegaard-integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
pubkegaard-discovery = { path = "../../crates/pubkegaard-discovery" }
pubkegaard-firewall = { path = "../../crates/pubkegaard-firewall" }
pubkegaard-policy = { path = "../../crates/pubkegaard-policy" }
pubkegaard-types = { path = "../../crates/pubkegaard-types" }
pubkegaard-wireguard = { path = "../../crates/pubkegaard-wireguard" }
serde_json.workspace = true
